AtCoder/APG4b/AP4/in_10.txt
./Main.cpp: In function ‘int main()’:
./Main.cpp:5:7: error: ‘i’ was not declared in this scope
   rep(i, 3) {
       ^
./Main.cpp:5:11: error: ‘rep’ was not declared in this scope
   rep(i, 3) {
           ^
